{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 55,
  "lineage": "2a414439-8a9d-4850-562b-20b383a48fb6",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:subnet/subnet-0bbb8a4df65ba5b5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0bbb8a4df65ba5b5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a3b68bfb93ef3ee6"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:subnet/subnet-0d12cdb17a7ee3007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d12cdb17a7ee3007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a3b68bfb93ef3ee6"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:subnet/subnet-030cfb3676806737d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-030cfb3676806737d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a3b68bfb93ef3ee6"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:vpc/vpc-0a3b68bfb93ef3ee6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d88c49a2a3b6b707",
            "default_route_table_id": "rtb-07a1e024f34fb3101",
            "default_security_group_id": "sg-021bc9c1431e06b26",
            "dhcp_options_id": "dopt-0e570e8fa7c57e183",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0a3b68bfb93ef3ee6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a1e024f34fb3101",
            "owner_id": "039827580846"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:039827580846:loadbalancer/app/new-lb1/e80be29a510a5660",
            "arn_suffix": "app/new-lb1/e80be29a510a5660",
            "desync_mitigation_mode": "defensive",
            "dns_name": "new-lb1-790879696.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:039827580846:loadbalancer/app/new-lb1/e80be29a510a5660",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "new-lb1",
            "security_groups": [
              "sg-090f3bd091777aabb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030cfb3676806737d"
              },
              {
                "subnet_id": "subnet-0bbb8a4df65ba5b5c"
              },
              {
                "subnet_id": "subnet-0d12cdb17a7ee3007"
              }
            ],
            "subnets": [
              "subnet-030cfb3676806737d",
              "subnet-0bbb8a4df65ba5b5c",
              "subnet-0d12cdb17a7ee3007"
            ],
            "vpc_id": "vpc-0a3b68bfb93ef3ee6",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.load_balancer.aws_default_subnet.default_subnet_a",
            "module.load_balancer.aws_default_subnet.default_subnet_b",
            "module.load_balancer.aws_default_subnet.default_subnet_c",
            "module.load_balancer.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:subnet/subnet-0bbb8a4df65ba5b5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0bbb8a4df65ba5b5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a3b68bfb93ef3ee6"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:subnet/subnet-0d12cdb17a7ee3007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d12cdb17a7ee3007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a3b68bfb93ef3ee6"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:subnet/subnet-030cfb3676806737d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-030cfb3676806737d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039827580846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a3b68bfb93ef3ee6"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:vpc/vpc-0a3b68bfb93ef3ee6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d88c49a2a3b6b707",
            "default_route_table_id": "rtb-07a1e024f34fb3101",
            "default_security_group_id": "sg-021bc9c1431e06b26",
            "dhcp_options_id": "dopt-0e570e8fa7c57e183",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0a3b68bfb93ef3ee6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a1e024f34fb3101",
            "owner_id": "039827580846"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:039827580846:listener/app/new-lb1/e80be29a510a5660/e28697c9fbb379cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:039827580846:targetgroup/target-group2/51fba9c58b53ef8d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:039827580846:listener/app/new-lb1/e80be29a510a5660/e28697c9fbb379cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:039827580846:loadbalancer/app/new-lb1/e80be29a510a5660",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_alb.application_load_balancer",
            "module.load_balancer.aws_default_subnet.default_subnet_a",
            "module.load_balancer.aws_default_subnet.default_subnet_b",
            "module.load_balancer.aws_default_subnet.default_subnet_c",
            "module.load_balancer.aws_default_vpc.default_vpc",
            "module.load_balancer.aws_lb_target_group.target_group",
            "module.load_balancer.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:039827580846:targetgroup/target-group2/51fba9c58b53ef8d",
            "arn_suffix": "targetgroup/target-group2/51fba9c58b53ef8d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:039827580846:targetgroup/target-group2/51fba9c58b53ef8d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a3b68bfb93ef3ee6"
          },
          "dependencies": [
            "module.load_balancer.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039827580846:security-group/sg-090f3bd091777aabb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090f3bd091777aabb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220504084906999300000001",
            "name_prefix": "terraform-",
            "owner_id": "039827580846",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3b68bfb93ef3ee6"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}